<resources>
    <string name="app_name">BasicEncoder</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">Main fragment</string>
    <string name="transposition_cipher_fragment_label">Transposition cipher</string>
    <string name="input_cipher_hint">Write text to encode here</string>
    <string name="output_cipher_hint">The result will appear here</string>
    <string name="button_encode">Encode</string>
    <string name="button_decode">Decode</string>
    <string name="button_swap">Swap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_text_to_encode_here">Enter text to encode here</string>
    <string name="title">Title</string>
</resources>