<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CipherFragment">

    <TextView
        android:id="@+id/cipherTtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="horizontal|vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cipherTtitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/innerScrollLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <TableLayout
                android:id="@+id/argumentsLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/innerScrollLayout" />

            <EditText
                android:id="@+id/inputPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/enter_text_to_encode_here"
                android:inputType="textMultiLine"
                android:lines="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/argumentsLayout"
                android:autofillHints="" />

            <Button
                android:id="@+id/encodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_encode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPlace" />

            <Button
                android:id="@+id/decodeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_decode"
                app:layout_constraintEnd_toStartOf="@+id/swapButton"
                app:layout_constraintStart_toEndOf="@+id/encodeButton"
                app:layout_constraintTop_toBottomOf="@+id/inputPlace" />

            <Button
                android:id="@+id/swapButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_swap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputPlace" />

            <TextView
                android:id="@+id/outputPlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:lines="8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/decodeButton" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/visualize_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/outputPlace" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>